--- a/Kernel/Config/NagiosCheck.pm.example
+++ b/Kernel/Config/NagiosCheck.pm.example
@@ -1,8 +1,8 @@
 # --
 # Kernel/Config/NagiosCheck.pm.example - Example Configfile for otrs.NagiosCheck - OTRS Nagios checker
-# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: NagiosCheck.pm.example,v 1.3 2010-02-15 18:16:06 ub Exp $
+# $Id: NagiosCheck.pm.example,v 1.4 2012-11-20 19:12:49 mh Exp $
 # --
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU AFFERO General Public License as published by
@@ -16,7 +16,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
 # or see http://www.gnu.org/licenses/agpl.txt.
 # --
 # For possible search options see:
